add contracts service
