# src/tsoa/swagger.json
@@ -433,12 +433,12 @@
 					"createdAt": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2025-03-06T15:31:18.999Z"
+						"default": "2025-03-07T04:05:34.320Z"
 					},
 					"updatedAt": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2025-03-06T15:31:19.000Z"
+						"default": "2025-03-07T04:05:34.321Z"
 					},
 					"name": {
 						"type": "string"
@@ -1654,6 +1654,111 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"Contract": {
+				"properties": {
+					"uid": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"address": {
+						"type": "string"
+					},
+					"chainId": {
+						"type": "number",
+						"format": "double"
+					},
+					"link": {
+						"type": "string"
+					},
+					"contractType": {
+						"type": "string",
+						"enum": [
+							"ERC721",
+							"ERC1155",
+							"ERC20",
+							"Other"
+						]
+					},
+					"deployDate": {
+						"type": "string"
+					},
+					"owner": {
+						"type": "string"
+					},
+					"verified": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"uid",
+					"name",
+					"address",
+					"chainId",
+					"link",
+					"deployDate",
+					"owner",
+					"verified"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_Contract.Exclude_keyofContract.uid-or-owner__": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"contractType": {
+						"type": "string",
+						"enum": [
+							"ERC721",
+							"ERC1155",
+							"ERC20",
+							"Other"
+						]
+					},
+					"address": {
+						"type": "string"
+					},
+					"chainId": {
+						"type": "number",
+						"format": "double"
+					},
+					"link": {
+						"type": "string"
+					},
+					"deployDate": {
+						"type": "string"
+					},
+					"verified": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"name",
+					"address",
+					"chainId",
+					"link",
+					"deployDate",
+					"verified"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Contract.uid-or-owner_": {
+				"$ref": "#/components/schemas/Pick_Contract.Exclude_keyofContract.uid-or-owner__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"CreateContractParams": {
+				"$ref": "#/components/schemas/Omit_Contract.uid-or-owner_"
 			},
 			"Voucher": {
 				"properties": {
@@ -5001,6 +5106,142 @@
 					}
 				],
 				"parameters": []
+			}
+		},
+		"/contracts": {
+			"get": {
+				"operationId": "GetContracts",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Contract"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Contracts"
+				],
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateContract",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Contract"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Contracts"
+				],
+				"security": [
+					{
+						"jwt": [
+							"admin"
+						]
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateContractParams"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/contracts/{uid}": {
+			"put": {
+				"operationId": "UpdateContract",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Contract"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Contracts"
+				],
+				"security": [
+					{
+						"jwt": [
+							"admin"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "uid",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateContractParams"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteContract",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"tags": [
+					"Contracts"
+				],
+				"security": [
+					{
+						"jwt": [
+							"admin"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "uid",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/vouchers": {
